--- a/sass/global/fonts.scss
+++ b/sass/global/fonts.scss
@@ -1,12 +1,14 @@
 @font-face{
-    font-family: "PT Sans";
-    src: url("../fonts/ptsans.woff") format("woff");
-    font-weight: normal;
-    font-style: normal;
+  font-family: "PT Sans";
+  src: url("../fonts/ptsans.woff2") format("woff2"),
+       url("../fonts/ptsans.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
 }
 @font-face{
-    font-family: "PT Sans";
-    src: url("../font/ptsansbold.woff") format("woff");
-    font-weight: bold;
-    font-style: normal;
+  font-family: "PT Sans Bold";
+  src: url("../font/ptsansbold.woff2") format("woff2"),
+       url("../font/ptsansbold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
 }
