--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,20 @@
-body{
-  width: 320px;
-  margin: auto;
-}
-@import "global/fonts.scss";
-@import "blocks/page-header.scss";
+@import "global/fonts";
+@import "lib/normalize.css";
+@import "variables";
+@import "mixins";
+
+//global
+@import "global/base";
+
+//blocks
+@import "blocks/page-header";
+@import "blocks/main-nav";
+@import "blocks/content";
+@import "blocks/intro";
+@import "blocks/reasons";
+@import "blocks/form";
+@import "blocks/gallery";
+@import "blocks/interested";
+@import "bloks/video";
+@import "blocks/page-footer";
+@import "blocks/social-links";
