--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -12,3 +12,23 @@
   padding: 0;
   list-style-type: none;
 }
+//флексбокс
+@mixin flex-column() {
+  display: flex;
+  flex-direction: column;
+}
+// font
+@mixin font-bold() {
+  font-family: $ff_base;
+  font-size: $fz_large;
+  font-weight: $fw_bold;
+}
+@mixin font-normal() {
+  font-family: $ff_base;
+  font-size: $fz_base;
+  font-weight: $fw_normal;
+}
+//без подчеркивания
+@mixin tdn() {
+  text-decoration: none;
+}
