--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -5,3 +5,7 @@ $c_white: #ffffff;
 $c_black: #000000;
 $c_gray: #333333;
 $bg_gray: #eeeeee;
+
+$mobile-width: "(max-width: 767px)";
+$tablet-width: "(min-width: 768px)";
+$desctop-width: "(min-width: 1200px)";
