--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -1,6 +1,21 @@
 .page-header{
+  position: relative;
 
   &__logo{
-    /*текст*/
+
+    @media #{$tablet-width} {
+      position: absolute;
+      top: 0;
+      right: 43%;
+
+    @media #{$desctop-width} {
+      right: 46%;
+    }
+  }
+
+    img {
+      width: 105px;
+      height: 85px;
+    }
   }
 }
