--- a/sass/global/base.scss
+++ b/sass/global/base.scss
@@ -2,11 +2,22 @@
   margin: 0;
   padding: 0;
 }
-.wrapper {
+body {
   font-family: $ff_base;
   font-size: 14px;
   line-height: 26px;
 
   text-align: center;
   text-transform: uppercase;
+}
+.wrapper {
+  width: 320px;
+  margin: 0 auto;
+
+  @media #{$tablet-width} {
+    width: 768px;
+  }
+  @media #{$desctop-width} {
+    width: 1200px;
+  }
 }
