--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -13,7 +13,6 @@
     width: 260px;
     font-size: 18px;
     margin: 0 auto;
-    /*margin-left: 30px;*/
     margin-bottom: 26px;
 
     @media #{$tablet-width} {
@@ -26,5 +25,10 @@
     margin-left: 20px;
     margin-right: 20px;
     color: $c_gray;
+
+    @media #{$tablet-width} {
+      width: 460px;
+      margin: 0 auto;
+    }
   }
 }
