--- a/sass/blocks/interested.scss
+++ b/sass/blocks/interested.scss
@@ -2,8 +2,14 @@
   margin: 20px;
 
   &__title {
-    font-size: 21px;
+    font-size: 18px;
     line-height: 26px;
+    font-weight: 700;
+    margin-bottom: 20px;
+
+    @media #{$tablet-width} {
+      font-size: 30px;
+    }
   }
 
   p {
