--- a/sass/blocks/content.scss
+++ b/sass/blocks/content.scss
@@ -8,18 +8,17 @@
     }
 
     img {
-      width: 320px;
+      width: 100%;
       height: 390px;
-      margin-top: -39px;
+      margin-top: -35px;
 
       @media #{$tablet-width} {
-        width:768px;
         height: 520px;
-        margin-top: 10px;
+        margin-top: 5px;
       }
       @media #{$desctop-width} {
-        width: 1200px;
-        height: 515px;
+        max-width: 1200px;
+        height: 518px;
       }
     }
   }
