--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -1,5 +1,7 @@
 .intro {
-  margin-bottom: 30px;
+  width: 280px;
+  margin-bottom: 25px;
+  @include container-fluid;
 
   @media #{$tablet-width} {
     margin-bottom: 50px;
@@ -10,10 +12,9 @@
   }
 
   &__title {
-    width: 260px;
     font-size: 18px;
     margin: 0 auto;
-    margin-bottom: 26px;
+    margin-bottom: 27px;
 
     @media #{$tablet-width} {
       font-size: 21px;
@@ -27,7 +28,6 @@
     color: $c_gray;
 
     @media #{$tablet-width} {
-      width: 460px;
       margin: 0 auto;
     }
   }
