--- a/sass/blocks/reasons.scss
+++ b/sass/blocks/reasons.scss
@@ -1,5 +1,7 @@
 .reasons {
   display: flex;
+  outline: 1px solid black;
+  @include container-fluid;
 
   @media #{$mobile-width} {
     flex-direction: column;
