--- a/sass/blocks/reasons.scss
+++ b/sass/blocks/reasons.scss
@@ -47,7 +47,7 @@
 
     @media #{$tablet-width} {
       width: 33%;
-      padding-top: 37px;
+      padding-top: 45px;
     }
 }
   p {
@@ -75,7 +75,7 @@
     margin-bottom: 10px;
 
     @media #{$tablet-width} {
-      margin-bottom: 18px;
+      margin-bottom: 15px;
 }
 }
   &__image {
@@ -98,8 +98,8 @@
 
     @media #{$tablet-width} {
       display: flex;
-      padding-top: 160px;
-      padding-bottom: 60px;
+      padding-top: 120px;
+      padding-bottom: 65px;
       text-align: center;
     }
   }
@@ -111,9 +111,17 @@
     @media #{$tablet-width} {
       width: 33.3%;
       padding-left: 0;
+
+      &:nth-child(2) {
+        order: 3;
+      }
     }
     b {
       font-size: 18px;
+
+      @media #{$tablet-width} {
+        font-size: 21px;
+      }
     }
     div {
       margin-top: 13px;
@@ -123,7 +131,7 @@
       @media #{$tablet-width} {
         width: 66%;
         margin: 0 auto;
-        margin-top: 25px;
+        margin-top: 20px;
       }
     }
   }
