--- a/sass/blocks/reasons.scss
+++ b/sass/blocks/reasons.scss
@@ -14,7 +14,7 @@
     @media #{$tablet-width} {
       display: flex;
     }
-      &--wrap{
+      &--transfer{
         @media #{$tablet-width} {
           flex-wrap: wrap;
         }
