--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -4,9 +4,18 @@
   &__wrapper {
 
     @media #{$tablet-width} {
+      outline: 1px solid black;
       margin: 0 auto;
+      padding-left: 35px;
+      padding-right: 77px;
       display: flex;
-      justify-content: space-around;
+      justify-content: space-between;
+    }
+/*???*/
+    @media #{$desctop-width} {
+      width: 86%;
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 
