--- a/sass/blocks/content.scss
+++ b/sass/blocks/content.scss
@@ -27,20 +27,24 @@
     margin-bottom: 30px;
 
     @media #{$tablet-width} {
-      margin-bottom: 50px;
+      margin-bottom: 65px;
+    }
+
+    @media #{$desctop-width} {
+      margin-bottom: 102px;
     }
     img {
-      width: 320px;
-      height: 160px;
-      margin-top: -30px;
+      width: 100%;
+      height: 158px;
+      margin-top: -36px;
 
       @media #{$tablet-width} {
-        width: 768px;
         height: 290px;
+        margin-top: 4px;
       }
       @media #{$desctop-width} {
         width: 1200px;
-        height: 300px;
+        height: 302px;
       }
     }
   }
