--- a/sass/blocks/gallery.scss
+++ b/sass/blocks/gallery.scss
@@ -13,6 +13,7 @@
   }
 
   &__item {
+    outline: 1px solid black;
     text-align: left;
 
     @media #{$tablet-width} {
@@ -31,7 +32,7 @@
   &__image {
 
     img {
-      width: 280px;
+      width: 100%;
       height: 280px;
 
       @media #{$tablet-width} {
