--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -8,7 +8,9 @@
   }
 
   &--hide {
-    margin-bottom: 49px;
+    margin-bottom: 23px;
+    padding-bottom: 26px;
+    border-bottom: 1px solid #e5e5e5;
 
     @media #{$tablet-width} {
       margin-bottom: 70px;
