--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,6 +15,7 @@
 @import "blocks/form";
 @import "blocks/gallery";
 @import "blocks/interested";
+@import "blocks/map";
 @import "blocks/video";
 @import "blocks/page-footer";
 @import "blocks/social-links";
