--- a/sass/blocks/gallery.scss
+++ b/sass/blocks/gallery.scss
@@ -1,47 +1,45 @@
 .gallery {
+  @include container-fluid;
   margin: 20px;
 
   @media #{$tablet-width} {
     display: flex;
     flex-wrap: wrap;
-    width: 648px;
-    margin: 20px auto;
-  }
-
-  @media #{$desctop-width} {
-    width: 1200px;
+    margin: 0 auto;
   }
 
   &__item {
-    outline: 1px solid black;
+    margin-bottom: 16px;
     text-align: left;
 
     @media #{$tablet-width} {
+      width: 50%;
       @include flex-column;
-      width: 324px;
-
-      &:first-child {
-        width: 100%;
-      }
     }
     @media #{$desctop-width} {
       width: 400px;
     }
+    &--photo {
+      width: 100%;
+    }
   }
 
   &__image {
+    padding-top: 22px;
+    border-top: 1px solid #e5e5e5;
+
+    @media #{$tablet-width} {
+      border-top: none;
+    }
 
     img {
       width: 100%;
       height: 280px;
+      margin-bottom: 5px;
 
       @media #{$tablet-width} {
-        width: 324px;
-        height: 267px;
-
-        &:first-child {
-        width: 100%;
-        }
+        height: 400px;
+        margin-bottom: -10px;
       }
     }
 
@@ -49,17 +47,34 @@
 
   &__discription {
     font-weight: 700;
+
+    @media #{$tablet-width} {
+      background-color: #f2f2f2;
+    }
   }
 
   &__author {
+    margin-bottom: 5px;
     text-transform: none;
     color: $c_gray;
+
+    @media #{$tablet-width} {
+      background-color: #f2f2f2;
+      margin-bottom: 0;
+    }
   }
 
   &__like {
     font-weight: 700;
-    padding-left: 35px;
+    padding-left: 37px;
     text-decoration: none;
     color: $c_black;
+
+    @media #{$tablet-width} {
+      position: relative;
+      top: -30px;
+      align-self: flex-end;
+      background-color: #f2f2f2;
+    }
   }
 }
