--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -11,6 +11,10 @@
     margin-bottom: 27px;
 
     @media #{$tablet-width} {
+      margin-bottom: 47px;
+    }
+
+    @media #{$desctop-width} {
       margin-bottom: 70px;
     }
   }
