--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,6 +14,7 @@
 @import "blocks/reasons";
 @import "blocks/form";
 @import "blocks/gallery";
+@import "blocks/doubt";
 @import "blocks/interested";
 @import "blocks/map";
 @import "blocks/video";
