--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -1,23 +1,26 @@
 .form {
   @include container-fluid;
   margin-top: -10px;
-  margin-bottom: 50px;
+  margin-bottom: 75px;
 
   @media #{$tablet-width} {
     display: flex;
     flex-wrap: wrap;
+    margin: 0 auto;
   }
 
   &__login {
+    outline: 1px solid black;
     margin: 20px;
     margin-bottom: 25px;
     text-align: right;
-    border-top: 1px solid #e5e5e5;
-    /*@media #{$tablet-width} {
-      width: 320px;
-      height: 355px;
-    }
 
+    @media #{$tablet-width} {
+      width: 50%;
+      margin: 0;
+      margin-bottom: 45px;
+    }
+/*
     @media #{$desctop-width} {
       width: 400px;
       margin-left: 160px;
@@ -37,6 +40,10 @@
   }
   &__login-name {
     margin-bottom: 22px;
+
+    @media #{$tablet-width} {
+      margin-top: 57px;
+}
     label {
       margin-right: 18px;
     }
@@ -48,100 +55,166 @@
     margin-bottom: 22px;
   }
   &__title {
+    margin-bottom: 21px;
+    padding-top: 18px;
     font-size: 18px;
     font-weight: 700;
     text-align: center;
-    margin-bottom: 20px;
-
-    @media #{$tablet-width} {
-      font-size: 21px;
-}
-  }
-
-  &__contacts {
+    text-transform: uppercase;
     border-top: 1px solid #e5e5e5;
 
     @media #{$tablet-width} {
-      width: 100%;
+      margin-top: 10px;
+      font-size: 21px;
+      border: none;
     }
+  }
+
+  &__contacts {
+    outline: 1px solid black;
+    margin: 20px;
+    text-align: left;
+
+    @media #{$tablet-width} {
+      width: 84%;
+      @include flex-column;
+      margin: 0 auto;
+    }
+
     label {
+      outline: 1px solid black;
+      margin-left: 23px;
       color: $c_gray;
+
+      @media #{$tablet-width} {
+        align-self: flex-start;
+      }
     }
     input[type="tel"], input[type="email"] {
-      width: 280px;
-      font-size: 18px;
-      line-height: 26px;
-      padding: 5px;
+      width: 83%;
+      margin-top: 7px;
+      padding: 18px 20px;
+      font-size: 17px;
+      background-color: #f2f2f2;
+      border: none;
+
+      @media #{$tablet-width} {
+        width: 93%;
+      }
     }
   }
 
   &__icon {
-
+    label {
+      display: none;
+    }
   }
 
   &__error {
+    outline: 1px solid black;
+    margin-bottom: 11px;
+    margin-left: 24px;
     color: #ff5c5c;
-    text-transform: none;
-    margin-top: 10px;
-    margin-bottom: 20px;
-  }
-
-  &__impression {
-    font-size: 18px;
-    font-weight: 700;
     text-transform: none;
 
     @media #{$tablet-width} {
-      width: 324px;
-      height: 355px;
+      align-self: flex-end;
+    }
+  }
+
+  &__impression {
+    outline: 1px solid black;
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: none;
+    text-align: left;
+
+    @media #{$tablet-width} {
+      width: 50%;
+      margin-bottom: 45px;
       order: -1;
     }
   }
 
   &__impression-list {
     @include list-clear;
+
+    li {
+      margin-top: 37px;
+      margin-bottom: 43px;
+      margin-left: 45px;
+
+      @media #{$tablet-width} {
+        margin-top: 60px;
+        margin-bottom: 0;
+        margin-left: 80px;
+      }
+    }
+    input[type="radio"] {
+      margin-right: 38px;
+    }
   }
 
   &__attractions {
+    outline: 1px solid black;
     font-size: 18px;
     font-weight: 700;
     text-transform: none;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    text-align: left;
 
     @media #{$tablet-width} {
       width: 100%;
+      text-align: center;
     }
   }
 
   &__attractions-list {
     @include list-clear;
+
+    li {
+      margin-top: 31px;
+      margin-bottom: 54px;
+      margin-left: 45px;
+
+      @media #{$tablet-width} {
+        margin: 0;
+      }
+    }
+    input[type="checkbox"] {
+      margin-right: 40px;
+    }
   }
 
   &__emotions {
-    margin-bottom: 50px;
+    outline: 1px solid black;
+    margin-top: -13px;
+    margin-bottom: 40px;
 
     @media #{$tablet-width} {
       width: 100%;
+      margin: 0;
     }
 
     textarea {
-      width: 280px;
-      height: 160px;
+      width: 75%;
+      height: 120px;
+      padding: 18px;
       font-size: 18px;
-      line-height: 26px;
+      font-weight: 700;
 
       @media #{$tablet-width} {
-        width: 100%;
+        /*width: 100%;*/
       }
     }
   }
   button {
-    width: 280px;
+    width: 87%;
+    padding: 17px 0;
     font-size: 21px;
-    line-height: 26px;
-    padding: 5px;
+    font-weight: 700;
+    text-transform: uppercase;
     color: $c_white;
     background-color: $c_base;
+    border: none;
   }
 }
